[ADD] Stack Exchange API integration

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "url": "git@github.com:RecastAI/starter-NodeJS.git"
   },
   "dependencies": {
+    "axios": "^0.16.1",
     "babel-polyfill": "^6.22.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
