--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "babel-polyfill": "^6.22.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
-    "recastai": "^3.1.1"
+    "recastai": "^3.1.1",
+    "slackify-html": "^1.0.1"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
