--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-polyfill": "^6.22.0",
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "git": "^0.1.5",
     "recastai": "^3.1.1",
     "slackify-html": "github:lucasdchamps/slackify-html"
   },
