--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
     "git": "^0.1.5",
-    "recastai": "^3.1.1",
-    "slackify-html": "github:lucasdchamps/slackify-html"
+    "recastai": "^3.1.1"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
